# headsafe

./: .gitignore  README.md
app/HeadSafe/HeadSafe/:  OccurrencesView.swift  CardView.swift  HeadSafeApp.swift  Info.plist
app/HeadSafe/HeadSafe.xcodeproj/: project.pbxproj
app/HeadSafe/HeadSafe.xcodeproj/project.xcworkspace/xcuserdata/pedroolyntho.xcuserdatad/: UserInterfaceState.xcuserstate
app/HeadSafe/HeadSafe.xcodeproj/xcuserdata/pedroolyntho.xcuserdatad/xcschemes/: xcschememanagement.plist
app/HeadSafe/HeadSafe/Assets.xcassets/testImage.imageset/: Contents.json
app/HeadSafe/HeadSafe/Colors/: Colors.swift
app/HeadSafe/HeadSafe/DataManager/: OccurrenceDataManager.swift
app/HeadSafe/HeadSafe/Mock/: OccurrenceMock.swift
app/HeadSafe/HeadSafe/Model/: Occurrence.swift
app/HeadSafe/HeadSafe/Navigation/: HeadSafeFlow.swift  HeadSafeNavigation.swift  HeadSafeViewFactory.swift
app/HeadSafe/HeadSafe/Network/: APIRoute.swift  NetworkError.swift  NetworkService.swift
app/HeadSafe/HeadSafe/Network/Body/: LastRequestBody.swift
app/HeadSafe/HeadSafe/Occurrences/:  OccurrencesView.swift  CardView.swift  OccurrencesViewModel.swift
app/HeadSafe/HeadSafe/SplashView/: SplashView.swift
docs/: DESIGN.md
embedded/: Dockerfile  Dockerfile.rbpi  Makefile  encode.py  image_base64.txt  main.py  pyvenv.cfg  requirements.txt  test.py  teste.py
embedded/data/: data.yaml
server/: Cargo.toml
server/src/: client.rs  image.rs  main.rs  stg.rs
