[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
eyre = "0.6.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
tokio = {version = "1.39.3", features = ["macros", "rt-multi-thread", "fs", "io-util"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
